# python-fastapi-beyond-crud

./: .env  .gitignore  pyproject.toml
migrations/: env.py
migrations/versions/: 034e2bc28609_fk_added_for_users_and_books.py  1032d6bc1de2_.py  26d10272f167_init.py  66ebb448acf0_add_password_hash.py  7a5f74a3c448_users_and_book_relation.py  dd8b4dbf2450_added_review_table.py  fd851797d4f5_added_roles_to_users.py
src/: __init__.py  celery_tasks.py  config.py  errors.py  mail.py  middleware.py
src/auth/: dependencies.py  models.py  routes.py  schemas.py  service.py  utils.py
src/books/: book_data.py  db_models.py  models.py  routes.py  service.py
src/db/: main.py  models.py  redis.py
src/reviews/: routes.py  schemas.py  service.py
src/tags/: routes.py  schemas.py  service.py
src/tests/: conftest.py  test_auth.py
