[project]
name = "bookly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asgiref>=3.11.1",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "celery>=5.6.2",
    "fastapi>=0.128.6",
    "fastapi-mail>=1.6.1",
    "flower>=2.0.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "passlib>=1.7.4",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.11.0",
    "pytest>=9.0.2",
    "redis>=7.1.1",
    "sqlmodel>=0.0.32",
    "uvicorn>=0.40.0",
]
